fix loading screen dark mode

--- a/src/app/components/loading/loading.component.scss
+++ b/src/app/components/loading/loading.component.scss
@@ -41,7 +41,7 @@
 
 .message {
   position: absolute;
-  color: $white;
+  color: $tile-text-color;
   font-weight: bold;
   font-size: 1.5rem;
   z-index: 1; // Should be on top of .loader
@@ -49,7 +49,7 @@
 
 .message-in-game {
   position: absolute;
-  color: $white;
+  color: $tile-text-color;
   font-weight: bold;
   font-size: 0.9rem;
   text-align: center;
